<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48dp"
        android:textStyle="bold"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginRight="10dp"
        android:gravity="right">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:onClick="registeButtonPressed"
            android:text="@string/register"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:onClick="homeButtonPressed"
            android:text="@string/home"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:background="#C6C3C3"
        android:inputType="textEmailAddress"
        android:hint="@string/loginEmail"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:background="#C6C3C3"
        android:inputType="textPassword"
        android:hint="@string/loginPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:onClick="makeLoginUser"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login" />




</LinearLayout>